# whiskers

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml
.github/workflows/: ci.yml
accounts/: admin.py  models.py  serializers.py  urls.py  views.py
accounts/management/commands/: seed_demo.py
accounts/migrations/: 0001_initial.py
catalog/: admin.py  filters.py  models.py  serializers.py  urls.py  views.py
catalog/management/commands/: seed_catalog.py
catalog/migrations/: 0001_initial.py
orders/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
orders/migrations/: 0001_initial.py
tests/: conftest.py  test_auth.py  test_cart_and_orders.py  test_catalog.py
whiskers/: asgi.py  settings.py  urls.py  wsgi.py
